--- a/Paintweb/Pages/Shared/_Layout.cshtml
+++ b/Paintweb/Pages/Shared/_Layout.cshtml
@@ -43,8 +43,9 @@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/drawscript.js" asp-append-version="true"></script>
+    <script src="~/js/CanvasManager.js" asp-append-version="true"></script>
+    <script src="~/js/Hub.js" asp-append-version="true"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 
